# argdump

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
docs/: index.html  schema-v1.json
src/argdump/: __init__.py  _deserializer.py  _schema.py  _serializer.py  _types.py  _values.py  models.py
tests/: conftest.py  test_deserialization.py  test_package.py  test_serialization.py  test_types.py  test_values.py
