[project]
name = "argdump"
version = "0.1.0"
description = "Serialize and deserialize argparse parsers"
readme = "README.md"
authors = [
    { name = "Florian Rupprecht", email = "dair@childmind.org" }
]
requires-python = ">=3.9"
dependencies = [
    "dataclasses>=0.6",
    "future-annotations>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/argdump"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]


[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
