[project]
name = "argdump"
version = "0.1.1"
description = "Serialize and deserialize argparse parsers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Florian Rupprecht", email = "dair@childmind.org" }
]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["argparse", "serialization", "json", "cli"]

[project.urls]
Homepage = "https://github.com/styx-api/argdump"
Repository = "https://github.com/styx-api/argdump"
Documentation = "https://niwrap.dev/argdump"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/argdump"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argdump"]